# Astrelle

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
astrelle/: __init__.py  background.py  galaxy.py  gui.py  main.py  satellite.py  stars.py  utils.py
astrelle/data/: presets.json
